--- a/landingpage.html
+++ b/landingpage.html
@@ -20,20 +20,21 @@
 <div class="landing">
 <nav class="navbar navbar-dark bg-opacity sticky-top" class="row">
 
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
     <a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Click</a>
     <span class="navbar-toggler-icon"></span>
     </button>
     	
-  	<div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-    <div class="bg-opacity p-0">
-      	<ul class="navbar-nav">
-		    <li class="ml-2 nav-item active">
-		        <a class="btn btn-outline-light toggle" href="landingpage.html">Home</a>		        
-		    </li>
-	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-light toggle" href="index.html">Services</a>				
-			</li> 
+    <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-0">
+        <ul class="navbar-nav">
+        <li class="ml-2 nav-item active">
+            <a class="btn btn-outline-light toggle" href="landingpage.html">Home</a>           
+        </li>
+          <li class="ml-2 nav-item active">
+        <a class="btn btn-outline-light toggle" href="index.html">Services</a>       
+      </li> 
 	      	<li class="ml-2 nav-item active">
 				<a class="btn btn-outline-light toggle" href="index.html#faq">FAQ&Prices</a>				
 			</li>	      
@@ -49,10 +50,10 @@
 <img src="assets/images/click.png" height="410px" width="320px">
 </div>
 		
-<div class="section2 text-white animate bounceIn"><h1>Click</h1>
-	<h4 class="animate bounceIn">Services Limited<hr>
+<div class="section2 text-white"><h4>ç</h4>
+	<h1>Click<hr>
 	<a href="index.html">	
-	<button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Click Here</button></h4>
+	<button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Click Here</button></h1>
 	</a>
 </div>
 <hr class="my-1">
