--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 <body>
 	
 <div class="port">
-<nav class="navbar navbar-light bg-opacity sticky-top" class="row">
+<nav class="navbarr navbar-dark bg-opacity sticky-top" class="row">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
     <!--<a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Zooms++</a>-->
@@ -37,14 +37,14 @@
 		        <a class="btn btn-outline-info toggle" href="portfolio.html">Home</a>		        
 		    </li>
 		    <li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="portfolio.html#portfolio" target="_blank">Portfolio</a>
+				<a class="btn btn-outline-info toggle" href="port.html">Portfolio</a>
 			</li>
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="portfolio.html#about" target="_blank">About</a>
+				<a class="btn btn-outline-info toggle" href="portfolio.html">About</a>
 				
 			</li>	      
 	      	<li class="ml-2 nav-item active">
-				<a class="btn btn-outline-info toggle" href="portfolio.html#us" target="_blank">Contact</a>				
+				<a class="btn btn-outline-info toggle" href="contact.html">Contact</a>				
 			</li>      
 	    </ul>
     </div>
@@ -57,7 +57,7 @@
 <div class="row">
 	<div class="col-md-12">
 		<div class="row">
-		  <h1 class="display-1 testp"><a href="#about"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">About Me</button></a></h1>
+		  <div class="display-1 testp"></div>
 
 		</div>
 	</div>
