--- a/travels.html
+++ b/travels.html
@@ -41,10 +41,10 @@
         <a class="btn btn-outline-light toggle" href="index.html">Services</a>       
       </li> 
           <li class="ml-2 nav-item active">
-        <a class="btn btn-outline-light toggle" href="index.html#faq" target="_blank">FAQ&Prices</a>       
+        <a class="btn btn-outline-light toggle" href="faq.html">FAQ&Prices</a>       
       </li>       
           <li class="ml-2 nav-item active">
-        <a class="btn btn-outline-light toggle" href="index.html#support" target="_blank">Contact</a>        
+        <a class="btn btn-outline-light toggle" href="support.html">Contact</a>        
       </li>      
       </ul>
     </div>
