--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
 			(hardware/software) microcontroller as part of the Lean-six sigma project.<br>
 			As a Full-Stack Web Developer, his work includes providing advanced<br>
 			technical support, building websites and tools to provide a more<br>
-			user-friendly platform.<br class="display-4">
+			user-friendly platform.<br>
 			
 			<a href="#portfolio"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View My Portfolio</button></a>
 
