--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 		<h1>Jumel D. Tagnipez</h1>
 		<h2> <em>Full-Stack Web Developer</em> </h2>
 
-		<p class="bio"> Jumel Tagnipez is a <span>cum laude</span> graduate of Electronics Engineering in CIT.<br>
+		<p class="bio"> Jumel Tagnipez is a <span>registered & cum laude</span> graduate of Electronics Engineering in CIT.<br>
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
 			He has been working professionally since 2007 in automotive/semiconductor<br>
 			industries as a Product Analyst doing forensic investigation of a defective<br>
