--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
 	<div class="col-md-4">
 		<div class="jumbotron bg-transparent">
 		  <h3>CAPSTONE1</h3>
-		  <a href="landingpage.html"><img src="assets/images/shoot2.png" alt="portfolio-1"></a>
+		  <a href="landingpage.html"><img src="assets/images/capstone1.jpg" alt="portfolio-1"></a>
 		
 		  <p class="lead text-primary">Click Services Limited is here to serve you for photo albums for special occasions like wedding. Tour Packages are also available to serve you.</p><hr>
 		  Released: Jul 23, 2018<br class="display-4">
@@ -124,39 +124,47 @@
 	<div class="col-md-4">
 	
 		<div class="jumbotron bg-transparent">
-		  <h3 class="display-5">mod00-09</h3>
+		  <h3 class="display-5">CAPSTONE2</h3>
 		  
-		  <a href="http://jumeltagnipez.github.io/sample-page/index.html"><img src="assets/images/waterdrop.gif" alt="portfolio-2"></a>
+		  <a href="https://jumel.000webhostapp.com/capstone2/landingpage.php"><img src="assets/images/capstone2.jpg" alt="portfolio-2"></a>
 		
-		  <p class="lead text-primary">Project mod00-09 is a sample responsive page being released using HTML and CSS technologies.</p><hr>
-		  Released: Jul 9, 2018<br class="display-4">
+		  <p class="lead text-primary">Techy-Shop is an e-commerce site for techy guys who wanted to connect the internet everywhere in the office area, homes, or even inside your car.</p><hr>
+		  Released: Sep 3, 2018<br class="display-4">
 		  	Technologies:<br>
-		  	HTML
+		  	HTML/CSS
 			<div class="progress">
 				<div class="progress-bar html progress-bar-striped progress-bar-animated"></div>
 			</div>
-			CSS
+			JAVASCRIPT
 			<div class="progress"> 
 				<div class="progress-bar css progress-bar-striped progress-bar-animated"></div>
+			</div>
+			PHP/MySQL
+			<div class="progress"> 
+				<div class="progress-bar javascript progress-bar-striped progress-bar-animated"></div>
 			</div>
 		
 		</div>
 	</div>
 	<div class="col-md-4">
 		<div class="jumbotron bg-transparent">
-		  <h3 class="display-5">mod00-00</h3>
-		  <a href="http://jumeltagnipez.github.io/developer-portfolio/index.html"><img src="assets/images/profile.jpg" alt="portfolio-3"></a>
+		  <h3 class="display-5">CAPSTONE3</h3>
+		  <a href="http://jumeltagnipez.github.io/sample-page/index.html"><img src="assets/images/profile.jpg" alt="portfolio-3"></a>
 		
-		  <p class="lead text-primary">Project mod00-00 is the very first web page being made during the first day of the coding bootcamp.</p><hr>
+		  <p class="lead text-primary">CAPSTONE3 is currently constructed.</p><hr>
 		  Released: Jun 29, 2018<br class="display-4">
 		  	Technologies:<br>
-		  	HTML
-			<div class="progress"> 
+		  	HTML/CSS
+			<div class="progress">
 				<div class="progress-bar html progress-bar-striped progress-bar-animated"></div>
 			</div>
-			CSS
+			JAVASCRIPT
 			<div class="progress"> 
 				<div class="progress-bar css progress-bar-striped progress-bar-animated"></div>
+			</div>
+			PHP/MySQL
+			<div class="progress"> 
+				<div class="progress-bar javascript progress-bar-striped progress-bar-animated"></div>
 			</div>
 		
 		</div>
