--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
 		  <a href="http://jumeltagnipez.github.io/sample-page/index.html"><img src="assets/images/profile.jpg" alt="portfolio-3"></a>
 		
 		  <p class="lead text-primary">CAPSTONE3 is currently constructed.</p><hr>
-		  Released: Jun 29, 2018<br class="display-4">
+		  Released: TBA<br class="display-4">
 		  	Technologies:<br>
 		  	HTML/CSS
 			<div class="progress">
