--- a/portfolio.html
+++ b/portfolio.html
@@ -126,7 +126,7 @@
 		<div class="jumbotron bg-transparent">
 		  <h3 class="display-5">CAPSTONE2</h3>
 		  
-		  <a href="https://jumel.000webhostapp.com/capstone2/landingpage.php"><img src="assets/images/capstone2.jpg" alt="portfolio-2"></a>
+		  <a href="https://jumel.000webhostapp.com/cp2/landingpage.php"><img src="assets/images/capstone2.jpg" alt="portfolio-2"></a>
 		
 		  <p class="lead text-primary">Techy-Shop is an e-commerce site for techy guys who wanted to connect the internet everywhere in the office area, homes, or even inside your car.</p><hr>
 		  Released: Sep 3, 2018<br class="display-4">
