--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 <nav class="navbarr navbar-dark bg-opacity sticky-top" class="row">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-    <!--<a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Zooms++</a>-->
+    <a class="navbar-brand text-white"><img src="assets/images/jt.jpg" height="30px" width="30px"></a>
     <span class="navbar-toggler-icon"></span>
     </button>
     	
