--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
 <div class="row"> 
 	<div class="col-md-4">
 		<div class="jumbotron bg-transparent">
-		  <h3>CAPSTONE1</h3>
+		  <h3>CAPSTONE1</h3><small>STATIC</small>
 		  <a href="landingpage.html"><img src="assets/images/capstone1.jpg" alt="portfolio-1"></a>
 		
 		  <p class="lead text-primary">Click Services Limited is here to serve you for photo albums for special occasions like wedding. Tour Packages are also available to serve you.</p><hr>
@@ -124,7 +124,7 @@
 	<div class="col-md-4">
 	
 		<div class="jumbotron bg-transparent">
-		  <h3 class="display-5">CAPSTONE2</h3>
+		  <h3 class="display-5">CAPSTONE2</h3><small>DYNAMIC</small>
 		  
 		  <a href="https://jumel.000webhostapp.com/cp2/landingpage.php"><img src="assets/images/capstone2.jpg" alt="portfolio-2"></a>
 		
@@ -148,9 +148,8 @@
 	</div>
 	<div class="col-md-4">
 		<div class="jumbotron bg-transparent">
-		  <h3 class="display-5">CAPSTONE3</h3>
-		  <a href="http://jumeltagnipez.github.io/sample-page/index.html"><img src="assets/images/profile.jpg" alt="portfolio-3"></a>
-		
+		  <h3 class="display-5">CAPSTONE3</h3><small>LARAVEL</small>
+		  <a href="http://jumel.000webhostapp.com/music_store/artists><img src="assets/images/profile.jpg" alt="portfolio-3"></a>
 		  <p class="lead text-primary">CAPSTONE3 is currently constructed.</p><hr>
 		  Released: TBA<br class="display-4">
 		  	Technologies:<br>
