--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 <nav class="navbarr navbar-dark bg-opacity sticky-top" class="row">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-    <a class="navbar-brand text-white"><img src="assets/images/jt.jpg" height="30px" width="30px"></a>
+    <!--<a class="navbar-brand text-white"><img src="assets/images/jt.jpg" height="30px" width="30px"></a>-->
     <span class="navbar-toggler-icon"></span>
     </button>
     	
@@ -100,10 +100,10 @@
 <div class="row"> 
 	<div class="col-md-4">
 		<div class="jumbotron bg-transparent">
-		  <h3>CAPSTONE1</h3><small>STATIC</small>
+		  <h3>CAPSTONE1</h3>
 		  <a href="landingpage.html"><img src="assets/images/capstone1.jpg" alt="portfolio-1"></a>
 		
-		  <p class="lead text-primary">Click Services Limited is here to serve you for photo albums for special occasions like wedding. Tour Packages are also available to serve you.</p><hr>
+		  <p class="lead text-primary">Static website Click Services Limited is here to serve you for photo albums for special occasions like wedding. Tour Packages are also available to serve you.</p><hr>
 		  Released: Jul 23, 2018<br class="display-4">
 		  	Technologies:<br>
 			Bootstrap
@@ -124,11 +124,11 @@
 	<div class="col-md-4">
 	
 		<div class="jumbotron bg-transparent">
-		  <h3 class="display-5">CAPSTONE2</h3><small>DYNAMIC</small>
+		  <h3 class="display-5">CAPSTONE2</h3>
 		  
 		  <a href="https://jumel.000webhostapp.com/cp2/landingpage.php"><img src="assets/images/capstone2.jpg" alt="portfolio-2"></a>
 		
-		  <p class="lead text-primary">Techy-Shop is an e-commerce site for techy guys who wanted to connect the internet everywhere in the office area, homes, or even inside your car.</p><hr>
+		  <p class="lead text-primary">Tech-Shop is a dynamic e-commerce site for techy guys who wanted to connect the internet everywhere in the office area, homes, or even inside your car.</p><hr>
 		  Released: Sep 3, 2018<br class="display-4">
 		  	Technologies:<br>
 		  	HTML/CSS
@@ -148,7 +148,7 @@
 	</div>
 	<div class="col-md-4">
 		<div class="jumbotron bg-transparent">
-		  <h3 class="display-5">CAPSTONE3</h3><small>LARAVEL</small>
+		  <h3 class="display-5">CAPSTONE3</h3>
 		  <a href="http://jumel.000webhostapp.com/music_store/artists><img src="assets/images/profile.jpg" alt="portfolio-3"></a>
 		  <p class="lead text-primary">CAPSTONE3 is currently constructed.</p><hr>
 		  Released: TBA<br class="display-4">
