--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,7 @@
 		<div class="jumbotron bg-transparent">
 		  <h3 class="display-5">CAPSTONE3</h3>
 			
-		  <a href="http://jumel.000webhostapp.com/music_store/artists"><img src="assets/images/profile.jpg" alt="portfolio-3"></a>
+		  <a href="https://jumel.000webhostapp.com/music_store/artists"><img src="assets/images/jt.jpg" alt="portfolio-3"></a>
 																    
 		  <p class="lead text-primary">CAPSTONE3 is currently constructed.</p><hr>
 		  Released: TBA<br class="display-4">
