--- a/portfolio.html
+++ b/portfolio.html
@@ -150,9 +150,9 @@
 		<div class="jumbotron bg-transparent">
 		  <h3 class="display-5">CAPSTONE3</h3>
 			
-		  <a href="https://jumel.000webhostapp.com/music_store/artists"><img src="assets/images/jt.jpg" alt="portfolio-3"></a>
+		  <a href="https://jumel.000webhostapp.com/music_store/resources/views/welcome.blade.php"><img src="assets/images/jt.jpg" alt="portfolio-3"></a>
 																    
-		  <p class="lead text-primary">CAPSTONE3 is currently constructed.</p><hr>
+		  <p class="lead text-primary">CAPSTONE3 is the 3rd project that is currently constructed using a php laravel framework.</p><hr>
 		  Released: TBA<br class="display-4">
 		  	Technologies:<br>
 		  	HTML/CSS
