--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
 			
 		  <a href="https://jumel.000webhostapp.com/music_store/resources/views/welcome.blade.php"><img src="assets/images/jt.jpg" alt="portfolio-3"></a>
 																    
-		  <p class="lead text-primary">CAPSTONE3 is the 3rd project that is currently constructed using a php laravel framework.</p><hr>
+		  <p class="lead text-primary">CAPSTONE3 is the third project that is currently constructed using a PHP MVC Laravel framework.</p><hr>
 		  Released: TBA<br class="display-4">
 		  	Technologies:<br>
 		  	HTML/CSS
