--- a/photography.html
+++ b/photography.html
@@ -133,14 +133,13 @@
 </div> <!-- container fluid -->
 
 <div class="footer-main">
-		<a href="https://jumeltagnipez.github.io/capstone1/portfolio.html"><small>jumeltagnipez|</small></a>
-		<a href="mailto:jumelonline01@gmail.com"><small>Email</small></a>
+		<a href="mailto:jumelonline01@gmail.com"><small>jumeltagnipez |Email</small></a>
 		
 		<div class="socmed">
-		<a href="https://www.facebook.com"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
-		<a href="https://www.twitter.com"> <img src="assets/images/twitter.jpg" alt="social-twitter"></a>
-		<a href="https://www.instagram.com"> <img src="assets/images/instagram.jpg" alt="social-instagram"></a>
-		<a href="https://www.youtube.com"> <img src="assets/images/youtube.jpg" alt="social-youtube"></a>
+		<a href="https://www.facebook.com/jumel.tagnipez"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
+		<a href="https://www.twitter.com/JumelTagnipez"> <img src="assets/images/twitter.jpg" alt="social-twitter"></a>
+		<a href="https://www.instagram.com/jumeltagnipez"> <img src="assets/images/instagram.jpg" alt="social-instagram"></a>
+		<a href="https://youtu.be/atnHCXVsQUo"> <img src="assets/images/youtube.jpg" alt="social-youtube"></a>
 		</div> 
 </div>
 
