--- a/portfolio.html
+++ b/portfolio.html
@@ -150,10 +150,10 @@
 		<div class="jumbotron bg-transparent">
 		  <h3 class="display-5">CAPSTONE3</h3>
 			
-		  <a href="https://jumel.000webhostapp.com/music_store/resources/views/welcome.blade.php"><img src="assets/images/jt.jpg" alt="portfolio-3"></a>
+		  <a href="https://mydiary-online.000webhostapp.com"><img src="assets/images/jt.jpg" alt="portfolio-3"></a>
 																    
-		  <p class="lead text-primary">CAPSTONE3 is the third project that is currently constructed using a PHP MVC Laravel framework.</p><hr>
-		  Released: TBA<br class="display-4">
+		  <p class="lead text-primary">CAPSTONE3 is the third project that is a daily diary constructed using a PHP MVC Laravel framework.</p><hr>
+		  Released: Sep 27, 2018<br class="display-4">
 		  	Technologies:<br>
 		  	HTML/CSS
 			<div class="progress">
