--- a/port.html
+++ b/port.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<title>Click</title>
+	<title>Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 	<!-- font awesome -->
