--- a/portfolio.html
+++ b/portfolio.html
@@ -54,14 +54,14 @@
 
 <div class="container-fluid">
 
-<div class="row">
+<!-- <div class="row">
 	<div class="col-md-12">
 		<div class="row">
 		  <div class="display-1 testp"></div>
 
 		</div>
 	</div>
-</div><hr class="my-5">
+</div><hr class="my-5"> -->
 				
 <div class="row">
 	<div class="about" id="about"> 
