--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
 			technical support, building websites and tools to provide a more<br>
 			user-friendly platform.<br>
 			
-			<a href="#portfolio"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View My Portfolio</button></a>
+			<a href="https://myjobstreet.jobstreet.com.ph/resume/uploaded-resume.php?x=mp11hqecu376vjlpm4svtp4g25"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View My Curriculum Vitae</button></a>
 
 			</p>
 			<br class="display-1">
