--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
 			technical support, building websites and tools to provide a more<br>
 			user-friendly platform.<br>
 			
-			<a href="https://myjobstreet.jobstreet.com.ph/resume/uploaded-resume.php?x=mp11hqecu376vjlpm4svtp4g25"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">View My Curriculum Vitae</button></a>
+			<a href="https://myjobstreet.jobstreet.com.ph/resume/uploaded-resume.php?x=mp11hqecu376vjlpm4svtp4g25"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
 
 			</p>
 			<br class="display-1">
@@ -92,7 +92,7 @@
 
 <hr class="my-5">
 <div>
-	<h1 id="portfolio">MY PORTFOLIO</h1><br>
+	<h1 id="portfolio">PORTFOLIO</h1><br>
 </div>
 
 
