--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,13 @@
 			(hardware/software) microcontroller as part of the Lean-six sigma project.<br>
 			As a Full-Stack Web Developer, his work includes providing advanced<br>
 			technical support, building websites and tools to provide a more<br>
-			user-friendly platform.<br>
+			user-friendly platform.<br><hr class="my-5">
+		<a href="https://www.w3schools.com/html"><img src="assets/images/html.png" alt="portfolio-1"></a>
+		<a href="https://www.w3schools.com/css"><img src="assets/images/css.png" alt="portfolio-1"></a>
+		<a href="https://www.w3schools.com/js"><img src="assets/images/js.png" alt="portfolio-1"></a>
+		<a href="https://www.w3schools.com/bootstrap"><img src="assets/images/bootstrap.jpg" alt="portfolio-1"></a>
+		<a href="https://www.w3schools.com/php"><img src="assets/images/phpmysql.png" alt="portfolio-1"></a><br><hr class="my-5">
+		
 			
 			<a href="https://myjobstreet.jobstreet.com.ph/resume/uploaded-resume.php?x=mp11hqecu376vjlpm4svtp4g25"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
 
