--- a/portfolio.html
+++ b/portfolio.html
@@ -87,12 +87,19 @@
 			<a href="https://myjobstreet.jobstreet.com.ph/resume/uploaded-resume.php?x=mp11hqecu376vjlpm4svtp4g25"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
 
 			</p>
+<div>
+	<h1 id="portfolio">TECHNOLOGIES</h1><br>
+</div>
 			<br class="display-1">
 		<a href="https://www.w3schools.com/html"><img src="assets/images/html.png" alt="portfolio-1"></a>
 		<a href="https://www.w3schools.com/css"><img src="assets/images/css.png" alt="portfolio-1"></a>
 		<a href="https://www.w3schools.com/js"><img src="assets/images/javascript.png" alt="portfolio-1"></a>
 		<a href="https://www.w3schools.com/bootstrap"><img src="assets/images/bootstrap.jpg" alt="portfolio-1"></a>
-		<a href="https://www.w3schools.com/php"><img src="assets/images/phpmysql.png" alt="portfolio-1"></a><br><hr class="my-5">
+		<a href="https://www.w3schools.com/jquery"><img src="assets/images/jquery.png" alt="portfolio-1"></a>
+		<a href="https://www.w3schools.com/php"><img src="assets/images/php.png" alt="portfolio-1"></a>
+		<a href="https://www.w3schools.com/sql"><img src="assets/images/sql.png" alt="portfolio-1"></a>
+		
+		<br><hr class="my-5">
 			
 	</div>
 </div> <!-- row -->
