--- a/portfolio.html
+++ b/portfolio.html
@@ -95,9 +95,9 @@
 		<a href="https://www.w3schools.com/css"><img src="assets/images/css.png" alt="portfolio-1"></a>
 		<a href="https://www.w3schools.com/js"><img src="assets/images/javascript.png" alt="portfolio-1"></a>
 		<a href="https://www.w3schools.com/bootstrap"><img src="assets/images/bootstrap.jpg" alt="portfolio-1"></a>
-		<a href="https://www.w3schools.com/jquery"><img src="assets/images/jquery.png" alt="portfolio-1"></a>
+		<a href="https://www.w3schools.com/jquery"><img src="assets/images/jquery.jpg" alt="portfolio-1"></a>
 		<a href="https://www.w3schools.com/php"><img src="assets/images/php.png" alt="portfolio-1"></a>
-		<a href="https://www.w3schools.com/sql"><img src="assets/images/sql.png" alt="portfolio-1"></a>
+		<a href="https://www.w3schools.com/sql"><img src="assets/images/sql.jpg" alt="portfolio-1"></a>
 		
 		<br><hr class="my-5">
 			
