--- a/portfolio.html
+++ b/portfolio.html
@@ -90,14 +90,14 @@
 <div>
 	<h1 id="portfolio">TECHNOLOGIES</h1><br>
 </div>
-			<br class="display-1">
+			<br class="display-4">
 		<a href="https://www.w3schools.com/html"><img src="assets/images/html.png" alt="portfolio-1"></a>
 		<a href="https://www.w3schools.com/css"><img src="assets/images/css.png" alt="portfolio-1"></a>
 		<a href="https://www.w3schools.com/js"><img src="assets/images/javascript.png" alt="portfolio-1"></a>
 		<a href="https://www.w3schools.com/bootstrap"><img src="assets/images/bootstrap.jpg" alt="portfolio-1"></a>
-		<a href="https://www.w3schools.com/jquery"><img src="assets/images/jquery.jpg" alt="portfolio-1"></a>
+		<a href="https://www.w3schools.com/jquery"><img src="assets/images/jquery.jpeg" alt="portfolio-1"></a>
 		<a href="https://www.w3schools.com/php"><img src="assets/images/php.png" alt="portfolio-1"></a>
-		<a href="https://www.w3schools.com/sql"><img src="assets/images/sql.jpg" alt="portfolio-1"></a>
+		<a href="https://www.w3schools.com/sql"><img src="assets/images/sql.jpeg" alt="portfolio-1"></a>
 		
 		<br><hr class="my-5">
 			
