--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
 			
 		  <a href="https://mydiary-online.000webhostapp.com"><img src="assets/images/jt.jpg" alt="portfolio-3" target="_blank"></a>
 																    
-		  <p class="lead text-primary">CAPSTONE3 is the third project that is a daily diary with SOAP Bible study guide constructed using a PHP MVC Laravel framework.</p><hr>
+		  <p class="lead text-primary">CAPSTONE3 is the third project that is a daily online-diary with SOAP Bible study guide constructed using a PHP MVC Laravel framework.</p><hr>
 		  Released: Sep 27, 2018<br class="display-4">
 		  	Technologies:<br>
 		  	HTML/CSS
