--- a/port.html
+++ b/port.html
@@ -140,7 +140,7 @@
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: +63 945 490 3238 / +63 920 8783272<br>
+Mobile: 09454903238/09208783272<br>
 Email: jumelonline01@gmail.com</p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
