--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
 			He has been working professionally since 2007 in automotive/semiconductor<br>
 			industries as a Product Analyst doing forensic investigation of a defective<br>
-			(hardware/software) microcontroller with the help of blueprint designs and the CAD software such as virtuoso.<br>
+			(hardware/software) microcontroller with the help of blueprint designs and the CAD software such as Virtuoso layout suite.<br>
 			As a Software Engineer, his work includes providing advanced<br>
 			technical support, building websites and tools to provide a more<br>
 			user-friendly platform.<br>
