--- a/portfolio.html
+++ b/portfolio.html
@@ -81,6 +81,9 @@
 			As a Software Engineer, his work includes providing advanced<br>
 			technical support, building websites and tools to provide a more<br>
 			user-friendly platform.<br>
+			He's also involved in team project management in creating capstone1 program,<br>
+			"click services" consisting three projects, the tutorials by Robert,<br>
+			different packages by Angelo, and the Photo Album Display.<br>
 
 		
 			
