--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 
 
 		<h1>Jumel D. Tagnipez</h1>
-		<h2> <em>Electronics Engineer with programming skills</em> </h2>
+		<h2> <em>Electronics Engineer with project management skills</em> </h2>
 
 		<p class="bio"> Jumel Tagnipez is a <span>registered ECE & cum laude</span> graduate of Electronics Engineering in CIT.<br>
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
@@ -84,6 +84,7 @@
 			He's also involved in team project management in creating capstone1 program,<br>
 			"click services" consisting three projects, the tutorials by Robert,<br>
 			different packages by Angelo, and the Photo Album Display.<br>
+			He studied Master's degree in Management Engineering at the University of San Jose Recoletos.<br>
 
 		
 			
@@ -193,7 +194,7 @@
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: 09454903238/09208783272<br>
+Mobile: 09208783272<br>
 Email: jumelonline01@gmail.com</p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
