--- a/portfolio.html
+++ b/portfolio.html
@@ -81,10 +81,11 @@
 			As a Software Engineer, his work includes providing advanced<br>
 			technical support, building websites and tools to provide a more<br>
 			user-friendly platform.<br>
-			He's also involved in team project management in creating capstone1 program,<br>
+			He's also involved in team project management in creating the program,<br>
 			"click services" consisting three projects, the tutorials by Robert,<br>
-			different packages by Angelo, and the Photo Album Display.<br>
+			different packages by Angelo, and the Photo Album services.<br>
 			He studied Master's degree in Management Engineering at the University of San Jose Recoletos.<br>
+			The team have interests in photography/ videography and travel, and they got the idea to publish an online photography and travel business.<br>
 
 		
 			
