--- a/portfolio.html
+++ b/portfolio.html
@@ -73,11 +73,12 @@
 		<h1>Jumel D. Tagnipez</h1>
 		<h2> <em>Electronics Engineer with project management skills</em> </h2>
 
-		<p class="bio"> Jumel Tagnipez is a <span>registered ECE & cum laude</span> graduate of Electronics Engineering in CIT.<br>
+		<p class="bio"> Jumel Tagnipez is a <span>registered ECE & cum laude</span> graduate of Electronics Engineering in Cebu Institute of Technology.<br>
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
 			He has been working professionally since 2007 in automotive/semiconductor<br>
 			industries as a Product Analyst doing forensic investigation of a defective<br>
-			(hardware/software) microcontroller with the help of blueprint designs and the CAD software such as Virtuoso layout suite.<br>
+			(hardware/software) microcontroller with the help of blueprint designs<br>
+			and the CAD software such as Virtuoso layout suite.<br>
 			As a Software Engineer, his work includes providing advanced<br>
 			technical support, building websites and tools to provide a more<br>
 			user-friendly platform.<br>
@@ -85,7 +86,8 @@
 			"click services" consisting three projects, the tutorials by Robert,<br>
 			different packages by Angelo, and the Photo Album services.<br>
 			He studied Master's degree in Management Engineering at the University of San Jose Recoletos.<br>
-			The team have interests in photography/ videography and travel, and they got the idea to publish an online photography and travel business.<br>
+			The team have interests in photography/ videography and travel,<br>
+			and they got the idea to publish an online photography and travel business.<br>
 
 		
 			
