--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
 			user-friendly platform.<br>
 			He's also involved in team project management in creating the program,<br>
 			"click services" consisting three projects, the tutorials by Robert,<br>
-			different packages by Angelo, and the Photo Album services.<br>
+			different packages by Angelo, and the Photo Album services by Jumel.<br>
 			He studied Master's degree in Management Engineering at the University of San Jose Recoletos.<br>
 			The team have interests in photography/ videography and travel,<br>
 			and they got the idea to publish an online photography and travel business.<br>
