--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
 			industries as a Product Analyst doing forensic investigation of a defective<br>
 			(hardware/software) microcontroller with the help of blueprint designs<br>
 			and the CAD software such as Virtuoso layout suite.<br>
-			As a Software Engineer, his work includes providing advanced<br>
+			As a Web Developer, his work includes providing advanced<br>
 			technical support, building websites and tools to provide a more<br>
 			user-friendly platform.<br>
 			He's also involved in team project management in creating the program,<br>
