--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 
 
 		<h1>Jumel D. Tagnipez</h1>
-		<h2> <em>Electronics Engineer with project management skills</em> </h2>
+		<h2> <em>Electronics Engineer with coding/ project management skills</em> </h2>
 
 		<p class="bio"> Jumel Tagnipez is a <span>registered ECE & cum laude</span> graduate of Electronics Engineering in Cebu Institute of Technology.<br>
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
