--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 		<h1>Jumel D. Tagnipez</h1>
 		<h2> <em>Electronic-Communications Engineer</em> </h2>
 
-		<p class="bio"> Jumel Tagnipez is a <s> registered ECE & cum laude</s> graduate of Electronic-Communications Engineering in Cebu Institute of Technology.<br>
+		<p class="bio"> Jumel Tagnipez is a <span> registered ECE & cum laude</span> graduate of Electronic-Communications Engineering in Cebu Institute of Technology.<br>
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
 			He has been working professionally since 2007 in automotive/semiconductor<br>
 			industries as a Product Analyst doing forensic investigation of a defective<br>
