--- a/portfolio.html
+++ b/portfolio.html
@@ -194,7 +194,7 @@
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: 09299947247<br>
+Mobile: 0969206824/09299947247<br>
 Email: jumelonline01@gmail.com</p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
