--- a/portfolio.html
+++ b/portfolio.html
@@ -80,9 +80,8 @@
 			(hardware/software) microcontroller with the help of blueprint designs<br>
 			and the CAD software like Virtuoso layout suite.<br>
 		
-			He's also involved in team project management in creating web applications,<br>
-			The team have interests in photography/ videography and travel,<br>
-			and they got the idea to publish an online photography and travel business.<br>
+			He's also involved in team project management for the travel site business.<br>
+			
 			He studied Master's degree in Management Engineering at the University of San Jose Recoletos.<br>
 			
 
