--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 		<h1>Jumel D. Tagnipez</h1>
 		<h2> <em>Electronics Engineer w/ programming skills</em> </h2>
 
-		<p class="bio"> Engr. Jumel Tagnipez is a registered PRC (Professional Regulation Commission)<span> ECE 0039013 & cum laude</span> “Latin honors” graduate of Electronics&Communications Engineering in Cebu Institute of Technology.<br>
+		<p class="bio"> Engr. Jumel Tagnipez is a registered PRC (Professional Regulation Commission)<span> ECE 0039013 & cum laude</span> “Latin honors” graduate of Electronics&Communications Engineering in Cebu Institute of Technology-University.<br>
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
 			He has been working professionally since 2007 in automotive/semiconductor<br>
 			industries as a Product Analyst doing forensic investigation of a defective<br>
