--- a/portfolio.html
+++ b/portfolio.html
@@ -87,8 +87,8 @@
 
 		
 			
-			<!—-a href="https://myjobstreet.jobstreet.com.ph/resume/uploaded-resume.php?x=mp11hqecu376vjlpm4svtp4g25"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a—->
-                        <a href="http://linkedin.com/in/jumel-tagnipez-03990311"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
+			<a href="https://myjobstreet.jobstreet.com.ph/resume/uploaded-resume.php?x=mp11hqecu376vjlpm4svtp4g25"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
+                        <a href="http://linkedin.com/in/jumel-tagnipez-03990311"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">LinkedIn</button></a>
 
 			</p>
 <div>
