--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
 	<div class="about" id="about"> 
 
 
-		<img src="assets/images/https://github.com/jumeltagnipez/capstone1/blob/master/assets/images/3C2CB493-9002-47F0-9BFD-DDB35AD87853.jpeg" class="profile">
+		<img src="assets/images/3C2CB493-9002-47F0-9BFD-DDB35AD87853.jpeg" class="profile">
 
 
 		<h1>Jumel D. Tagnipez</h1>
