--- a/portfolio.html
+++ b/portfolio.html
@@ -121,7 +121,7 @@
 		  <h3>CAPSTONE1</h3>
 		  <a href="landingpage.html" target="_blank"><img src="assets/images/capstone1.jpg" alt="portfolio-1"></a>
 		
-		  <p class="lead text-primary">Static website “www.clickservices.tk” is here to serve you for photo albums for special occasions like wedding. Tour Packages are also available to serve you.</p><hr>
+		  <p class="lead text-primary">Static website Click Services Limited is here to serve you for photo albums for special occasions like wedding. Tour Packages are also available to serve you. www.clickservices.tk</p><hr>
 		  Released: Jul 23, 2018<br class="display-4">
 		  	Technologies:<br>
 			Bootstrap
@@ -146,7 +146,7 @@
 		  
 		  <a href="https://jumel.000webhostapp.com/cp2/landingpage.php" target="_blank"><img src="assets/images/capstone2.jpg" alt="portfolio-2"></a>
 		
-		  <p class="lead text-primary">”www.techshoponline.tk” is a dynamic e-commerce site for techy guys who wanted to connect the internet everywhere in the office area, homes, or even inside your car.</p><hr>
+		  <p class="lead text-primary">Tech-shop is a dynamic e-commerce site for techy guys who wanted to connect the internet everywhere in the office area, homes, or even inside your car. www.techshoponline.tk</p><hr>
 		  Released: Sep 3, 2018<br class="display-4">
 		  	Technologies:<br>
 		  	HTML/CSS
@@ -170,7 +170,7 @@
 			
 		  <a href="https://mydiary-online.000webhostapp.com" target="_blank"><img src="assets/images/jt.jpg" alt="portfolio-3"></a>
 																    
-		  <p class="lead text-primary">”www.diaryonline.tk” is the third project that is a daily online-diary with SOAP Bible study guide constructed using a PHP MVC Laravel framework.</p><hr>
+		  <p class="lead text-primary">CAPSTONE3 is the third project that is a daily online-diary with SOAP Bible study guide constructed using a PHP MVC Laravel framework. www.diaryonline.tk</p><hr>
 		  Released: Sep 27, 2018<br class="display-4">
 		  	Technologies:<br>
 		  	HTML/CSS
