--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 		<h1>Jumel D. Tagnipez</h1>
 		<h2> <em>Quality/FA Engineer w/ programming skills 00:00:00</em> </h2>
 
-		<p class="bio"> Engr. Jumel Tagnipez is a registered PRC (Professional Regulation Commission)<span> ECE 0039013 with 4.5/5.0 high graded </span> graduate of Electronics&Communications Engineering in Cebu Institute of Technology-University.<br>
+		<p class="bio"> Engr. Jumel Tagnipez is a registered PRC (Professional Regulation Commission)<span> ECE 0039013 and “cum laude” </span> graduate of Electronics&Communications Engineering in Cebu Institute of Technology-University.<br>
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
 			He has been working professionally since 2006 in automotive/semiconductor<br>
 			industries as a Product Analyst doing forensic investigation of a defective<br>
