--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@ P.S. He is not a Muslim from Southern Philippines. He is a Christian from Cebu â
 		
 			
 			<a href="https://myjobstreet.jobstreet.com.ph/resume/uploaded-resume.php?x=mp11hqecu376vjlpm4svtp4g25"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
-                        <a href="http://linkedin.com/in/jumel-tagnipez-03990311"><button type="button" class="btn btn-outline-important btn-lg animate bounceIn">LinkedIn</button></a>
+                        <a href="http://linkedin.com"><button type="button" class="btn btn-outline-important btn-lg animate bounceIn">LinkedIn</button></a>
 
 			</p>
 <div>
