--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,8 @@
 			
 P.S. He is not a Muslim from Southern Philippines. He is a Christian from Cebu “queen city of the south”. His birthplace is Leyte “typhoon Haiyan site”.<br>
 
+Failure Analysis is life saving. I did save a lot of driver’s life. If there is a recall, don’t hesistate to ask at your nearest car dealer.<br>
+
 		
 			
 			<a href="https://myjobstreet.jobstreet.com.ph/resume/uploaded-resume.php?x=mp11hqecu376vjlpm4svtp4g25"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
