--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 
 
 		<h1>Jumel D. Tagnipez</h1>
-		<h2> <em>Quality/FA Engineer skilled in programming
+		<h2> <em>Retired Quality/FA Engineer skilled in programming
 </em> </h2>
 
 		<p class="bio"> Engr. Jumel Tagnipez is a registered PRC (Professional Regulation Commission)<span> ECE 0039013 and “cum laude” </span> graduate of Electronics&Communications Engineering in Cebu Institute of Technology-University.<br>
