--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@ Failure Analysis is life saving. He did save a lot of driver’s life. If there 
 
 		
 			
-			<a href="https://myjobstreet.jobstreet.com.ph/resume/uploaded-resume.php?x=mp11hqecu376vjlpm4svtp4g25"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
+			<a href="https://www.mediafire.com/file/lqvshj8yoxte73d/JumelTagnipez_webDev.docx/file"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
                         <a href="http://linkedin.com"><button type="button" class="btn btn-outline-important btn-lg animate bounceIn">LinkedIn</button></a>
 
 			</p>
