--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 
 
 		<h1>Jumel D. Tagnipez</h1>
-		<h2> <em>Retired FA Engineer skilled in programming
+		<h2> <em>FA Engineer skilled in programming
 </em> </h2>
 
 		<p class="bio"> Engr. Jumel Tagnipez is a registered PRC (Professional Regulation Commission)<span> ECE 0039013 and “cum laude” </span> graduate of Electronics&Communications Engineering in Cebu Institute of Technology-University.<br>
@@ -93,7 +93,7 @@ Failure Analysis is life saving. He did save a lot of driver’s life. If there 
 		
 			
 			<a href="https://www.mediafire.com/file/lqvshj8yoxte73d/JumelTagnipez_webDev.docx/file"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
-                        <a href="http://linkedin.com"><button type="button" class="btn btn-outline-important btn-lg animate bounceIn">LinkedIn</button></a>
+                        <a href="https://www.linkedin.com/in/jumel-tagnipez-6018b9199"><button type="button" class="btn btn-outline-important btn-lg animate bounceIn">LinkedIn</button></a>
 
 			</p>
 <div>
