--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@ Failure Analysis is life saving. He did save a lot of driver’s life. If there 
 
 		
 			
-			<a href="https://www.mediafire.com/file/mlvkvwrrx66wjgc/JumelTagnipezCV.docx/file"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
+			<a href="https://www.mediafire.com/file/8r4eyry6w59ogx0/JumelTagnipez_1page.pdf/file"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Curriculum Vitae</button></a>
                         <a href="https://www.linkedin.com/in/jumel-tagnipez-03990311"><button type="button" class="btn btn-outline-important btn-lg animate bounceIn">LinkedIn</button></a>
                                                                     <!-- 6018b9199 -->
 			</p>
